# final_project

./: README.md
backend/: pyproject.toml
docs/באקאנד/: דף דרישות באק.docx
docs/פרונטאנד/: דף דרישות אפליקצייה.docx
frontend/: package-lock.json
