[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yakov grintz <yakovgrintz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
pip = "^24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
